Devops/Docker-Kubernetes-Ansible_practice/mydp.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: httpd-deployment
  labels:
    app: httpd
spec: 
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
