Devops/Docker-Kubernetes-Ansible_practice/rolebinding-configmap.yaml

apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myc
      image: vimal13/apache-webserver-php
      volumeMounts:
        - mountPath: /etc/httpd/config.d/
          name: mys1
  volumes:
    - configMap:
        name: mycm
      name: mys1
