Devops/Docker-Kubernetes-Ansible_practice/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: s1
          persistentVolumeClaim:  # Corrected key to lowercase
            claimName: mypvc      # Reference to your PVC
      containers:
        - name: myapp
          image: sql
          ports:
            - containerPort: 3306  # Corrected to match MySQL port
          volumeMounts:
            - mountPath: "/var/lib/sql"  # Correct key
              name: s1

---

apiVersion: v1
kind: Service
metadata:
  name: mywordpresssvc
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80          # The port the service will expose externally
      targetPort: 3306  # The port your MySQL container is listening on inside the pod
      nodePort: 31000   # The node port (exposed externally)
