Devops/Docker-Kubernetes-Ansible_practice/mywordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywsvc
spec:
  type: NodePort
  selector:
    tier: frontend
  ports:
    - port: 80
      nodePort: 30001
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywordpressdeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      name: wordpresspod
      labels:
        tier: frontend
    spec:
      containers:
        - name: wordpress-container
          image: wordpress
          ports:
            - containerPort: 80
          volumeMounts:  
            - mountPath: "/var/www/html"  
              name: s2
      volumes:  
        - name: s2
          persistentVolumeClaim:  
            claimName: mypvcwordpress
