Devops/Docker-Kubernetes-Ansible_practice/rs-svc-pvc-pv.yaml
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: myrs
spec:
  replicas: 5
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: mypod
      labels:
        app: web
    spec:
      volumes:
        - name: s1
           PersistentVolumeClaim:
             - claimName: mypvc
      containers:
        - name: myc
          image: httpd
          volumeMounts:
            - mountPath: /mnt/myfolder
              name: s1

apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      nodePort: 32000
      targetPort: 80
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: mypvc
spec:
  storageClassName: ""
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
apiVersion: v1
kind: PersistentVolume
metadata:
  name: mypv
spec:
  accessModes:
    - ReadWriteOnce
  capacity:
    storage: 1Gi
  hostPath:
    path: /mnt/myfolder
