Devops/Docker-Kubernetes-Ansible_practice/svc.yaml
apiVersion: v1                                                                                                           
kind: Service                                                                    
metadata:                                                                        
  name: mywordpresssvc                                                           
spec:                                                                            
  type: NodePort                                                                 
  selector:                                                                      
    app: web                                                             
  ports:
    - port: 80
