Devops/Docker-Kubernetes-Ansible_practice/mynetpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mynp
spec:
  podSelector:
      matchLabels:
        app: myd
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
          protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: all-deny
spec:
  podSelector: 
    {}
  policyTypes:
    - Ingress
